--- a/cityimages.html
+++ b/cityimages.html
@@ -1,13 +1,16 @@
-<!DOCTYPE .html>
+<!DOCTYPE html>
+<h1> 
+London
+</h1>
     <head>
         <title>
-            City Images
+            London Images
         </title>
     </head>
         <body>
             <header>
                 <h1> 
-                    City Images
+                    London Images
                 </h1>
             </header>
             <nav>
@@ -22,7 +25,7 @@
                     <li> 
                         <a href="cityimages.html">
                             <button>
-                                City Images
+                                London Images
                             </button>
                         </a>
                     </li>
