--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE .html>
+<!DOCTYPE html>
+<h1> 
+    London
+</h1>
     <head>
         <title>
             STS
@@ -22,10 +25,30 @@
                     <li> 
                         <a href="cityimages.html">
                             <button>
-                                City Images
+                                London Images
                             </button>
                         </a>
                     </li>
                 </ul>
             </nav>
         </body>
+    <div> 
+        <p> 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Pellentesque diam volutpat commodo sed egestas egestas. Enim nunc faucibus a pellentesque. Vulputate enim nulla aliquet 
+            porttitor lacus luctus. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Tincidunt ornare massa eget 
+            egestas purus viverra accumsan in. At in tellus integer feugiat. Feugiat in fermentum posuere urna nec. Ac placerat vestibulum 
+            lectus mauris ultrices eros in. Tristique sollicitudin nibh sit amet commodo nulla facilisi. Vitae proin sagittis nisl rhoncus 
+            mattis rhoncus urna neque. Odio ut enim blandit volutpat maecenas volutpat blandit. Tristique senectus et netus et. In ornare 
+            quam viverra orci sagittis eu volutpat. Senectus et netus et malesuada fames. Id semper risus in hendrerit gravida rutrum quisque 
+            non tellus. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Hac habitasse platea dictumst vestibulum rhoncus.
+        </p>
+        <p>     
+            Tristique magna sit amet purus gravida quis. Cursus sit amet dictum sit. Quis enim lobortis scelerisque fermentum dui faucibus in. 
+            Vel pretium lectus quam id leo. Nisi porta lorem mollis aliquam ut porttitor leo a. Proin sed libero enim sed faucibus turpis. Sed 
+            egestas egestas fringilla phasellus. Id aliquet risus feugiat in ante metus. Feugiat in ante metus dictum at tempor. Orci phasellus 
+            egestas tellus rutrum tellus. Rhoncus urna neque viverra justo nec ultrices dui. Sed blandit libero volutpat sed cras ornare.
+        </p>
+   
+   
+    </div>
