Flushed out cityimages page

--- a/cityimages.html
+++ b/cityimages.html
@@ -14,21 +14,25 @@ London
                 </h3>
             </header>
             <nav>
-                <ul> 
-                    <li> 
-                        <a href="index.html">
-                            <button>
-                                Home
-                            </button>
-                        </a>
-                    </li>
-                    <li> 
-                        <a href="cityimages.html">
-                            <button>
-                                London Images
-                            </button>
-                        </a>
-                    </li>
-                </ul>
+                <a href="index.html">
+                    <button>
+                        Home
+                    </button>
+                </a>
+                <a href="cityimages.html">
+                    <button>
+                        London Images
+                    </button>
+                </a>
             </nav>
         </body>
+<table>
+    <tr>
+        <th> <img src= "images/London.jpg" alt="London" width="300" height="180"> </th>
+        <th> <img src= "images/London2.jpg" alt="London" width="300" height="180"> </th>
+    </tr>
+    <tr>
+        <th> <img src= "images/London3.jpg" alt="London3" width="300" height="180"> </th>
+        <th> <img src= "images/London4.jpg" alt="London4" width="300" height="180"> </th>
+    </tr>
+</table>
