--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
             egestas egestas fringilla phasellus. Id aliquet risus feugiat in ante metus. Feugiat in ante metus dictum at tempor. Orci phasellus 
             egestas tellus rutrum tellus. Rhoncus urna neque viverra justo nec ultrices dui. Sed blandit libero volutpat sed cras ornare.
         </p>
-   
-   
+    </div>
+    <div>
+        <h4>
+            Leaders
+        </h4>
+        <table border="1"> 
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+            </tr>
+               
+            <tbody>
+                <tr>
+                    <td>James McGregor</td>
+                    <td>JamesM@gmail.com</td>                        
+                    <td>2132141241</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
