--- a/index.html
+++ b/index.html
@@ -54,7 +54,20 @@
         <h4>
             Leaders
         </h4>
-        <table border="1"> 
+        <style> 
+            table{
+                width: 100%
+            } 
+            table, tr, th, td {
+                border: 1px solid gray;
+                border-collapse: collapse; 
+            }
+            th, td {
+                padding: 1rem;
+                text-align: left;
+            }
+        </style>
+        <table>
             <tr>
                 <th>Name</th>
                 <th>Email</th>
