--- a/cityimages.html
+++ b/cityimages.html
@@ -26,13 +26,13 @@ London
                 </a>
             </nav>
         </body>
-<table>
-    <tr>
-        <th> <img src= "images/London.jpg" alt="London" width="300" height="180"> </th>
-        <th> <img src= "images/London2.jpg" alt="London" width="300" height="180"> </th>
-    </tr>
-    <tr>
-        <th> <img src= "images/London3.jpg" alt="London3" width="300" height="180"> </th>
-        <th> <img src= "images/London4.jpg" alt="London4" width="300" height="180"> </th>
-    </tr>
-</table>
+        <table>
+            <tr>
+                <th> <img src= "images/London.jpg" alt="London" width="100%" height="100%"> </th>
+                <th> <img src= "images/London2.jpg" alt="London" width="100%" height="100%"> </th>
+            </tr>
+            <tr>
+                <th> <img src= "images/London3.jpg" alt="London3" width="100%" height="100%"> </th>
+                <th> <img src= "images/London4.jpg" alt="London4" width="100%" height="100%"> </th>
+            </tr>
+        </table>
