--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link> <simpletravelsite class="css"></simpletravelsite>
 <h1> 
     London
 </h1>
@@ -32,6 +33,8 @@
                 </ul>
             </nav>
         </body>
+<div 
+        <p style="font-family: Verdana, sans-serif;"> </p>
     <div> 
         <p> 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -54,19 +57,19 @@
         <h4>
             Leaders
         </h4>
-        <table border="1"> 
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-            </tr>
-               
-            <tbody>
+            <table style border="1"> 
                 <tr>
-                    <td>James McGregor</td>
-                    <td>JamesM@gmail.com</td>                        
-                    <td>2132141241</td>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
                 </tr>
-            </tbody>
-        </table>
+               
+                <tbody>
+                    <tr>
+                        <td>James McGregor</td>
+                        <td>JamesM@gmail.com</td>                        
+                        <td>2132141241</td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
