--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link> <simpletravelsite class="css"></simpletravelsite>
+<link rel="stylesheet" href="simpletravelsite.css">
 <h1> 
     London
 </h1>
@@ -27,8 +27,8 @@
                 </a>   
             </nav>
         </body>
-<div 
-        <p style="font-family: Verdana, sans-serif;"> </p>
+<div>
+        <p style="font-family: Verdana, sans-serif;"> Hello</p>
     <div> 
         <p> 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
