--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
 </h1>
     <head>
         <title>
-            STS
+            Travel to London
         </title>
     </head>
         <body>
-            <header>
-                <h2> 
-                    Simple Travel Site
-                </h2>
-            </header>
             <nav>
                 <a href="index.html">
                     <button>
@@ -24,11 +19,9 @@
                     <button>
                         London Images
                     </button>
-                </a>   
+                </a>  
             </nav>
         </body>
-<div>
-        <p style="font-family: Verdana, sans-serif;"> Hello</p>
     <div> 
         <p> 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -52,16 +45,18 @@
             Leaders
         </h3>
         <style> 
-            table{
+            table {
                 width: 100%
             } 
             table, tr, th, td {
-                border: 1px solid gray;
-                border-collapse: collapse; 
+                border: 2px solid black; 
             }
             th, td {
                 padding: 1rem;
-                text-align: left;
+                text-align: center;
+            }
+            h1 {
+                text-align: center;
             }
         </style>
         <table>
