--- a/cityimages.html
+++ b/cityimages.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="simpletravelsite.css">
 <h1> 
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 London
 </h1>
         <style>
@@ -21,13 +27,53 @@ London
                 </a>
             </nav>
         </body>
-        <table>
-            <tr>
-                <th> <img src= "images/London.jpg" alt="London" width="100%" height="100%"> </th>
-                <th> <img src= "images/London2.jpg" alt="London" width="100%" height="100%"> </th>
-            </tr>
-            <tr>
-                <th> <img src= "images/London3.jpg" alt="London3" width="100%" height="100%"> </th>
-                <th> <img src= "images/London4.jpg" alt="London4" width="100%" height="100%"> </th>
-            </tr>
-        </table>
+        <div class="row">
+            <style>    
+                .row::after {
+                content: "";
+                clear: both;
+                display: table;
+                }
+            </style>
+            <div class="column">
+                <img src= "images/London.jpg" alt="London" width="150%" height="150%"> 
+                <style> 
+                    .column {
+                        float: left;
+                        width: 50%;
+                        padding: 5px;
+                    }
+                </style>
+            </div>
+            <div class="column">
+                <img src= "images/London2.jpg" alt="London" width="150%" height="150%">
+                <style> 
+                    .column {
+                        float: left;
+                        width: 50%;
+                        padding: 5px;
+                    }
+                </style>
+            </div>
+            <div class="column">
+                <img src= "images/London3.jpg" alt="London3" width="150%" height="150%">
+                <style> 
+                    .column {
+                        float: left;
+                        width: 50%;
+                        padding: 5px;
+                    }
+                </style>
+            </div>
+            <div class="column">
+                <img src= "images/London4.jpg" alt="London4" width="150%" height="150%">
+                <style> 
+                    .column {
+                        float: left;
+                        width: 50%;
+                        padding: 5px;
+                    }
+                </style>
+            </div>
+          </div>
+          <stlye>
