--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
 </h1>
     <head>
         <title>
-            Travel to London
+            Travel to London!
         </title>
     </head>
         <body>
             <nav>
                 <a href="index.html">
-                    <button>
                         Home
-                    </button>
                 </a>
                 <a href="cityimages.html">
-                    <button>
                         London Images
-                    </button>
                 </a>  
             </nav>
         </body>
@@ -47,12 +43,34 @@
         <style> 
             table {
                 width: 100%
+                
             } 
             table, tr, th, td {
-                border: 2px solid black; 
+                margin: auto;
+                border: 2px solid rgb(41, 161, 241); 
+                border-collapse: collapse;
+                width: 100px;
+            }
+            nav {
+                margin: auto;
+                /* width: 50px; */
+                text-align: center;
+            }
+            nav a {
+                background-color: rgb(41, 161, 241);
+                padding: 0.5rem;
+                margin: 0.5rem;
+                display: inline-block;
+                font-size: 1rem;
+                color: white;
+                border:rgb(41, 161, 241);
+                text-decoration: none;
+            }
+            h3 {
+                text-align: center;
             }
             th, td {
-                padding: 1rem;
+                padding: 2rem;
                 text-align: center;
             }
             h1 {
@@ -71,6 +89,11 @@
                         <td>James McGregor</td>
                         <td>JamesM@gmail.com</td>                        
                         <td>2132141241</td>
+                    </tr>
+                    <tr> 
+                        <td>LeBron James</td>
+                        <td>lj23@gmail.com</td>
+                        <td>1234567890</td>
                     </tr>
                 </tbody>
             </table>
