--- a/index.html
+++ b/index.html
@@ -20,36 +20,81 @@
         </body>
     <div> 
         <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Pellentesque diam volutpat commodo sed egestas egestas. Enim nunc faucibus a pellentesque. Vulputate enim nulla aliquet 
-            porttitor lacus luctus. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Tincidunt ornare massa eget 
-            egestas purus viverra accumsan in. At in tellus integer feugiat. Feugiat in fermentum posuere urna nec. Ac placerat vestibulum 
-            lectus mauris ultrices eros in. Tristique sollicitudin nibh sit amet commodo nulla facilisi. Vitae proin sagittis nisl rhoncus 
-            mattis rhoncus urna neque. Odio ut enim blandit volutpat maecenas volutpat blandit. Tristique senectus et netus et. In ornare 
-            quam viverra orci sagittis eu volutpat. Senectus et netus et malesuada fames. Id semper risus in hendrerit gravida rutrum quisque 
-            non tellus. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu. Hac habitasse platea dictumst vestibulum rhoncus.
+            London is one of the most beautiful and most famous cities in the World. For decades it has been a tourist attraction for many people, 
+            and many great events have taken place there, including the 2012 Olympic Games. Except for that, the capital of England is a beautiful 
+            place with many things to see on the streets and experience both during the day and the night. If this did not convince you to go, 
+            follow this article to see some more reasons why you should visit London.
         </p>
+        <br>
+        <h3>Sights to See</h3>
         <p>     
-            Tristique magna sit amet purus gravida quis. Cursus sit amet dictum sit. Quis enim lobortis scelerisque fermentum dui faucibus in. 
-            Vel pretium lectus quam id leo. Nisi porta lorem mollis aliquam ut porttitor leo a. Proin sed libero enim sed faucibus turpis. Sed 
-            egestas egestas fringilla phasellus. Id aliquet risus feugiat in ante metus. Feugiat in ante metus dictum at tempor. Orci phasellus 
-            egestas tellus rutrum tellus. Rhoncus urna neque viverra justo nec ultrices dui. Sed blandit libero volutpat sed cras ornare.
+            The sightseeing: London has many famous sights that you should at least once in your life see in person and not only in movies, TVs or 
+            pictures. You probably heard of the well-known red double-decker bus and hopping on it will make your experience worthwhile by sitting 
+            on the top deck. This way you will see every important place that this city has to offer, from historical wonders to beautiful architecture. 
+            Here are a few places to visit on your trip:
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>Big Ben</th>
+                            <th>The British Museum</th>
+                            <th>St. Paul's Cathedral</th>
+                        </tr>
+                        <tr>
+                            <th>Buckingham Palace</th>
+                            <th>The Tower of London</th>
+                            <th>Picadilly Circus</th>
+                        </tr>
+                        <tr>
+                            <th>The London Eye</th>
+                            <th>Soho</th>
+                            <th>The Sky Garden</th>
+                        </tr>
+                    </tbody>
+                </table>    
         </p>
+        <h3>The Sports</h3>
+        <p>
+            It is widely known that people in England simply adore football (soccer if you are an American) and there are many clubs playing in the 
+            strongest league in the world (The English Premier League). So, if you are also a fan of this sport, you might consider visiting a game during 
+            a weekend that you are spending there. Whether it is Wembley, Emirates, Stamford Bridge, Craven Cottage, or the newly-built Tottenham Hotspur Stadium, 
+            you know that you will be treated with a fantastic atmosphere during a high-quality football match. If this isn't the sport of your choosing, you might 
+            consider visiting Wimbledon for tennis or watching a rugby game. There are many more options when it comes to sports and if you are a fan, you should take that chance.
+        </p>
+            <div class=.photo>
+                <img src="images/prem.jpg" alt="Premier League" width="100%" height="100%">
+            </div>
+        <p>
+            <h3>The Nightlife</h3>
+            While Londoners are hard workers, probably due to it being one of the most expensive cities to live in, they also like to relax as well, and this city pays off in this 
+            matter big time. When it comes to the nightlife in London it offers anything you can imagine. You will have your fair share of options from classic London pubs, chick 
+            clubs, dive bars, theatres filled with Hollywood stars, underground places with live music, outdoor live concerts of any genre you can imagine, and many more things. 
+            England's capital has it all in terms of having fun at night and it seems to be one of those cities that never sleeps. If you consider yourself a night owl, you surely 
+            would not miss out on an opportunity for a good night's fun in London.
+        </p> 
     </div>
+    <br>
     <div>
         <h3>
             Leaders
         </h3>
         <style> 
+            .photo {
+                margin: 1rem;
+                width: 45vw;
+                height: auto;
+                color: black;
+                border: 20px;
+                border-radius: 10000px;
+                align-content: center;
+            }
             table {
-                width: 100%
-                
+                width: 100%   
             } 
             table, tr, th, td {
                 margin: auto;
-                border: 2px solid rgb(41, 161, 241); 
+                border: 3px solid rgb(41, 161, 241); 
                 border-collapse: collapse;
-                width: 100px;
+                width: 750px;
             }
             nav {
                 margin: auto;
@@ -57,7 +102,7 @@
                 text-align: center;
             }
             nav a {
-                background-color: rgb(41, 161, 241);
+                background-color:rgb(41, 161, 241);
                 padding: 0.5rem;
                 margin: 0.5rem;
                 display: inline-block;
@@ -68,12 +113,23 @@
             }
             h3 {
                 text-align: center;
+                background-color:rgb(41, 161, 241);
+                padding: 0.25rem;
+                margin: 1rem auto;
+                display: block;
+                width: fit-content;
+                font-size: 1rem;
+                color: white;
+                border: rgb(41, 161, 241); 
             }
             th, td {
-                padding: 2rem;
+                padding: 1rem;
                 text-align: center;
             }
             h1 {
+                text-align: center;
+            }
+            p{
                 text-align: center;
             }
         </style>
@@ -83,7 +139,6 @@
                 <th>Email</th>
                 <th>Phone</th>
             </tr>
-               
                 <tbody>
                     <tr>
                         <td>James McGregor</td>
