--- a/cityimages.html
+++ b/cityimages.html
@@ -10,12 +10,13 @@ London
 </h1>
     <style>
         .photo {
-            margin: 0.5rem;
+            margin: 0.2rem;
             width: 45vw;
             height: auto;
-            border: 5px;
             color: black;
-            border-radius: 3px;
+            border: 5px;
+            border-radius: 100px;
+            align-content: center;
             }
     </style>
         <body>
@@ -24,7 +25,7 @@ London
                     Home
                 </a>
                 <a href="cityimages.html">
-                    London Images
+                    Images
                 </a>
             </nav>
         </body>
