--- a/cityimages.html
+++ b/cityimages.html
@@ -57,4 +57,8 @@ London
             <img src= "images/London4.jpg" alt="London" class="photo" width="50%" height="50%">
             <img src= "images/London2.jpg" alt="London" class="photo" width="50%" height="50%">
             <img src= "images/London3.jpg" alt="London" class="photo" width="50%" height="50%">
+            <img src= "images/london5.jpg" alt="London" class="photo" width="50%" height="50%">
+            <img src= "images/prem2.jpg" alt="London" class="photo" width="50%" height="50%">
+            <img src= "images/london6.jpg" alt="London" class="photo" width="50%" height="50%">
+            <img src= "images/london7.webp" alt="London" class="photo" width="50%" height="50%">
         </div>
