--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             follow this article to see some more reasons why you should visit London.
         </p>
         <br>
-        <h3>Sights to See</h3>
+        <h3>The Sights</h3>
         <p>     
             The sightseeing: London has many famous sights that you should at least once in your life see in person and not only in movies, TVs or 
             pictures. You probably heard of the well-known red double-decker bus and hopping on it will make your experience worthwhile by sitting 
